aws_network/main.tf
terraform {
  backend "s3" {
    bucket = "danil-ignatushkin-project"
    key = "dev/network/terraform.tfstate"
    region = "eu-central-1"
  }
}



resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
  enable_dns_support = true
  enable_dns_hostnames = true
  tags = {
    "Name" = "${var.env}-vpc"    
  }
}

# Internet Gateway
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    "Name" = "${var.env}-igw"
  }
}

# Subnets===========================

resource "aws_subnet" "public_subnets" {
  count = length(var.public_subnet_cidrs)
  vpc_id = aws_vpc.main.id
  # cidr_block = element(var.public_subnet_cidrs, count.index)
  cidr_block = cidrsubnet(var.vpc_cidr, 8, count.index+1)
  availability_zone = data.aws_availability_zones.avaliable.names[count.index]
  map_public_ip_on_launch = true

  tags = {
    "Name" = "${var.env}-public-${count.index + 1}"
  }
}

# Route Table=========================
resource "aws_route_table" "public_subnets" {
  vpc_id = aws_vpc.main.id
  
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  } 
  tags = {
    "Name" = "${var.env}-route-public-subnets"
  }
  depends_on = [aws_internet_gateway.main]

}
 
resource "aws_route_table_association" "public_routes" {
  count = length(aws_subnet.public_subnets[*].id)
  route_table_id = aws_route_table.public_subnets.id
  subnet_id = element(aws_subnet.public_subnets[*].id, count.index)

}


# NAT Gateway====================With EIPs

resource "aws_eip" "nat" {
  count = length(var.private_subnet_cidrs)
  vpc = true

  tags = {
    "Name" = "${var.env}-nat-gw-${count.index + 1}"
  }
}

resource "aws_nat_gateway" "nat" {
  count = length(var.private_subnet_cidrs)
  allocation_id = aws_eip.nat[count.index].id
  subnet_id = element(aws_subnet.public_subnets[*].id, count.index)

  tags = {
    "Name" = "${var.env}-nat-gw-${count.index + 1}"
  }
}

# Ptivate subnent and routing====================

resource "aws_subnet" "private_subnets" {
  count = length(var.private_subnet_cidrs)
  vpc_id = aws_vpc.main.id
  # cidr_block = element(var.private_subnet_cidrs, count.index)
  cidr_block = cidrsubnet(var.vpc_cidr, 8, count.index + 101)
  availability_zone = data.aws_availability_zones.avaliable.names[count.index]
  map_public_ip_on_launch = false
  
  tags = {
    "Name" = "${var.env}-private-${count.index + 1}"
  }
}

resource "aws_route_table" "private_subnets" {
  count = length(var.private_subnet_cidrs)
  vpc_id = aws_vpc.main.id

  route {
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_nat_gateway.nat[count.index].id
  }

  tags = {
    "Name" = "${var.env}-route-private-subnet-${count.index + 1}"
  }
}

resource "aws_route_table_association" "private_routes" {
  count = length(aws_subnet.private_subnets[*].id)
  route_table_id = aws_route_table.private_subnets[count.index].id
  subnet_id = element(aws_subnet.private_subnets[*].id, count.index)
}
